[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Space.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Hit_Hurt.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.1638, 5.45822 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Space" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="EarthDamageZone" type="Area2D" parent="."]
position = Vector2( 80, 144 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarthDamageZone"]
shape = SubResource( 1 )

[node name="OuchSound" type="AudioStreamPlayer" parent="EarthDamageZone"]
stream = ExtResource( 4 )
[connection signal="end" from="Space" to="." method="_on_Space_end"]
[connection signal="destroyed" from="Player" to="." method="_on_Player_destroyed"]
[connection signal="area_entered" from="EarthDamageZone" to="." method="_on_EarthDamageZone_area_entered"]
